ExpressJS weather app

--- a/templates/views/weather.hbs
+++ b/templates/views/weather.hbs
@@ -23,9 +23,9 @@
                       <p id="today_date">15th Jun</p>
                   </div>
                   <div class="main_layer">
-                      <p id="city_name">Kol</p>
+                      <p id="city_name">No Data</p>
                       <div class="middle_layer data_hide">
-                          <p id="temp"><span>0</span><sup>o</sup>C</p>
+                          <p id="temp"><span id="temp_real_val"></span><sup>o</sup>C</p>
                           <p id="temp_status"><i class="fa fa-cloud"></i></p>
                       </div>
                   </div>
@@ -40,5 +40,6 @@
 
     {{!-- js code  --}}
     <script src="js/main.js"></script>
+    <script src="js/time.js"></script>
 </body>
 </html>
